Fix clipping under "Mutual Friends"

--- a/NoStatusStandalone.theme.css
+++ b/NoStatusStandalone.theme.css
@@ -58,6 +58,11 @@ foreignObject[width="32"][height="32"][mask*="url"] {
     clip-path: circle(50% at 50% 50%);
 }
 
+foreignObject[width="40"][height="40"][mask*="url"] {
+    mask: none;
+    clip-path: circle(50% at 50% 50%);
+}
+
 foreignObject[width="80"][height="80"][mask*="url"] {
     mask: none;
     clip-path: circle(50% at 50% 50%);
